# fitron

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: run_demo.py
src/fitron/: __init__.py
src/pip_model/: __init__.py  api.py  pipeline.py
src/pip_model/core/: __init__.py  adaptive.py  decision_tree.py  fuzzy.py  mcdm.py  memory.py  preprocessor.py  reward.py
tests/: conftest.py  test_deployment_regression.py  test_smoke.py
