[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "trace"
version = "0.1.1"
description = "TRACE (Tree-based Ranking with Adaptive Criteria Evolution): adaptive fuzzy-tree MCDM decision engine"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "zibransheikh" },
  { name = "hazlived" }
]
dependencies = [
  "numpy>=1.26.4,<2.0",
  "pandas>=2.1,<2.3",
  "scikit-learn>=1.4,<1.6"
]
keywords = ["trace", "fuzzy", "decision-tree", "mcdm", "topsis", "adaptive"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0"
]

[project.urls]
Homepage = "https://example.com/trace"
Issues = "https://example.com/trace/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
