[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "fitron"
version = "1.0.0"
description = "FITRON: adaptive fuzzy-tree MCDM decision engine for generic tabular binary problems"
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
  { name = "zibransheikh" },
  { name = "hazlived" }
]
dependencies = [
  "numpy>=1.26.4",
  "pandas>=2.1",
  "scikit-learn>=1.4"
]
keywords = ["fitron", "fuzzy", "decision-tree", "mcdm", "topsis", "adaptive", "tabular", "binary-classification"]
classifiers = [
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Operating System :: OS Independent",
  "Topic :: Scientific/Engineering :: Artificial Intelligence"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "build>=1.2",
  "twine>=5.0"
]

[project.urls]
Homepage = "https://github.com/hazlived/fitron"
Issues = "https://github.com/hazlived/fitron/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
